# sendingcpp

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.cov  Doxyfile  README.md  auth.txt  build.sh  update-api.bash
src/: CMakeLists.txt  debug.cpp  debug.hpp  descendent.hpp  event.cpp  event.hpp  jsonwrap.hpp  types.hpp
src/api/: CMakeLists.txt  basejob.cpp  basejob.hpp  constants.hpp  login.cpp  wellknown.cpp
src/api/application-service/definitions/: location.hpp  protocol.hpp  user.hpp
src/api/csapi/: account-data.cpp  account-data.hpp  admin.cpp  admin.hpp  administrative_contact.cpp  administrative_contact.hpp  appservice_room_directory.cpp  appservice_room_directory.hpp  banning.cpp  banning.hpp  capabilities.cpp  capabilities.hpp  content-repo.cpp  content-repo.hpp  create_room.cpp  create_room.hpp  device_management.cpp  device_management.hpp  directory.cpp  directory.hpp  event_context.cpp  event_context.hpp  filter.cpp  filter.hpp  inviting.cpp  inviting.hpp  joining.cpp  joining.hpp  keys.cpp  keys.hpp  kicking.cpp  kicking.hpp  leaving.cpp  leaving.hpp  list_joined_rooms.cpp  list_joined_rooms.hpp  list_public_rooms.cpp  list_public_rooms.hpp  login.cpp  login.hpp  (+66 more)
src/api/csapi/definitions/: auth_data.hpp  client_device.hpp  device_keys.hpp  event_batch.hpp  event_filter.hpp  openid_token.hpp  public_rooms_response.hpp  push_condition.hpp  push_rule.hpp  push_ruleset.hpp  request_email_validation.hpp  (+9 more)
src/api/definitions/: event_filter.hpp  room_event_filter.hpp  sync_filter.hpp
src/application-service/definitions/: location.hpp  protocol.hpp  user.hpp
src/base/: CMakeLists.txt  asio-std-file-handler.hpp  basejob.cpp  basejob.hpp  constants.hpp  copy-helper.hpp  cursorutil.hpp  debug.cpp  debug.hpp  descendent.hpp  event.cpp  event.hpp  eventinterface.hpp  file-desc.cpp  file-desc.hpp  jobinterface.hpp  jsonwrap.hpp  kazvevents.hpp  libkazv-config.hpp  libkazv-defs.hpp.in  maybe.hpp  promise-interface.hpp  types.hpp  util.hpp
src/base/serialization/: immer-array.hpp  immer-box.hpp  immer-flex-vector.hpp  immer-map.hpp  std-optional.hpp
src/client/: CMakeLists.txt  client-model.cpp  client-model.hpp  client.cpp  client.hpp  clientfwd.hpp  clientutil.hpp  clientwrap.cpp  clientwrap.hpp  cursorutil.hpp  device-list-tracker.cpp  device-list-tracker.hpp  did.cpp  did.hpp  didModel.hpp  discovery.hpp  encrypted-file.cpp  encrypted-file.hpp  error.hpp  paginate.cpp  random-generator.hpp  roomeffects.cpp  sdk-model-cursor-tag.hpp  sdk-model.cpp  sdk-model.hpp  sdk.hpp  sdn.cpp  sdn.hpp  sdnModel.hpp  send.cpp  status-utils.hpp  sync.cpp  thread-safety-helper.hpp  topleveleffects.hpp  util.hpp
src/client/actions/: auth.cpp  auth.hpp  content.cpp  content.hpp  encryption.cpp  encryption.hpp  ephemeral.cpp  ephemeral.hpp  membership.cpp  membership.hpp  paginate.cpp  paginate.hpp  profile.cpp  profile.hpp  send.cpp  send.hpp  states.cpp  states.hpp  sync.cpp  sync.hpp
src/client/data/: cereal_map.hpp  room.cpp  room.hpp
src/client/room/: room-model.cpp  room-model.hpp  room.cpp  room.hpp  roomwrap.hpp
src/crypto/: CMakeLists.txt  aes-256-ctr.cpp  aes-256-ctr.hpp  base64.cpp  base64.hpp  crypto-p.hpp  crypto-util.hpp  crypto.cpp  crypto.hpp  inbound-group-session-p.hpp  inbound-group-session.cpp  inbound-group-session.hpp  outbound-group-session-p.hpp  outbound-group-session.cpp  outbound-group-session.hpp  session-p.hpp  session.cpp  session.hpp  sha256.cpp  sha256.hpp  time-util.hpp
src/csapi/: account-data.cpp  account-data.hpp  admin.cpp  admin.hpp  administrative_contact.cpp  administrative_contact.hpp  appservice_room_directory.cpp  appservice_room_directory.hpp  banning.cpp  banning.hpp  capabilities.cpp  capabilities.hpp  content-repo.cpp  content-repo.hpp  create_room.cpp  create_room.hpp  device_management.cpp  device_management.hpp  directory.cpp  directory.hpp  event_context.cpp  event_context.hpp  filter.cpp  filter.hpp  inviting.cpp  inviting.hpp  joining.cpp  joining.hpp  keys.cpp  keys.hpp  kicking.cpp  kicking.hpp  leaving.cpp  leaving.hpp  list_joined_rooms.cpp  list_joined_rooms.hpp  list_public_rooms.cpp  list_public_rooms.hpp  login.cpp  login.hpp  (+66 more)
src/csapi/definitions/: auth_data.hpp  client_device.hpp  device_keys.hpp  event.hpp  event_batch.hpp  event_filter.hpp  openid_token.hpp  public_rooms_response.hpp  push_condition.hpp  push_rule.hpp  push_ruleset.hpp  request_email_validation.hpp  request_msisdn_validation.hpp  request_token_response.hpp  room_event_batch.hpp  room_event_filter.hpp  state_event_batch.hpp  sync_filter.hpp  third_party_signed.hpp  timeline_batch.hpp  user_identifier.hpp
src/doc-interfaces/: promise.hpp  range-t.hpp
src/eventemitter/: CMakeLists.txt  eventinterface.hpp  lagerstoreeventemitter.hpp
src/examples/: CMakeLists.txt
src/examples/basic/: commands.cpp  commands.hpp  main.cpp  sign.cpp  web3Sign.cpp
src/identity/definitions/: request_email_validation.hpp  request_msisdn_validation.hpp
src/job/: CMakeLists.txt  asio-promise-handler.hpp  basejob.cpp  basejob.hpp  cprjobhandler.cpp  cprjobhandler.hpp  jobinterface.hpp  login.cpp  login.hpp  util.hpp  wellknown.cpp  wellknown.hpp
src/store/: CMakeLists.txt  context.hpp  store.hpp
src/tests/: CMakeLists.txt  basejobtest.cpp  crypto-test.cpp  cursorutiltest.cpp  event-emitter-test.cpp  event-test.cpp  file-desc-test.cpp  file-guard.hpp  kazvjobtest.cpp  kazvtest-respath.hpp.in  promise-test.cpp  store-test.cpp  testmain.cpp  tests.hpp
src/tests/base/: serialization-test.cpp  types-test.cpp
src/tests/client/: ban-test.cpp  client-test-util.cpp  client-test-util.hpp  content-test.cpp  discovery-test.cpp  encrypted-file-test.cpp  keys-test.cpp  kick-test.cpp  paginate-test.cpp  profile-test.cpp  random-generator-test.cpp  room-test.cpp  sdk-test.cpp  serialization-test.cpp  sync-test.cpp  thread-safety-test.cpp  util-test.cpp
src/tests/crypto/: deterministic-test.cpp
src/tests/resources/: kazvjob-test-res2
tutorials/: CMakeLists.txt  tutorial0.cpp  tutorial0.md
(+42 files in other folders)
